--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     Game START
   </div>
 
+  <div class="winOrLossDiv">
+
+  </div>
+
 <script src="Assets/Javascript/game.js"></script>
 
 </body>
